# tokei_rs

./: Cargo.toml  Dockerfile  Earthfile
.github/workflows/: deploy.yml
src/: main.rs
