[package]
authors = ["Erin Power <xampprocky@gmail.com>"]
name = "tokei_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
tokei = "12.1"
dotenv = "0.15"
tempfile = "3.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
percent-encoding = "2.3"
log = "0.4"
once_cell = "1.21"
cached = "0.49"
actix-web = "4.11"
eyre = "0.6"
env_logger = "0.11"
rsbadges = "1.1"
csscolorparser = "0.7"
time = "0.3.43"
